# game-writer

./: .dockerignore  .env.example  .gitignore  .gitmessage  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  run.ps1  test.py  项目介绍.md
.cursor/rules/: setting-split-and-data.mdc
.github/workflows/: docker-ghcr.yml
config/: output_targets.json  preferences.md
data/剧情大纲/: 温馨偶遇与潜在危机（深入展开）.md  雨夜旧站的会说话的伞.md
data/背景设定/智慧种族/: 人类.md  影魔.md  死灵.md  龙族（德拉贡）.md
data/角色设定/: 岚.md  测试.md  艾莉丝·温特菲尔德.md  （修改备份）岚.md
data/角色设定/历史版本/: 艾莉丝·温特菲尔德_20260327_214657.md
scripts/: inspect_vector.py  smoke_rag_toggle.ps1  smoke_vector.ps1
skills/outline_writer/: SKILL.md
skills/outline_writer/scripts/: generate_outlines.py  read_settings.py  run.py
skills/setting_splitter/: SKILL.md
skills/setting_splitter/scripts/: run.py
skills/version_control/: SKILL.md
src/core/: agent.py  app_context.py  engine.py  policy.py  tool_registry.py
src/services/: llm_env_service.py  output_path_service.py  preferences_service.py  skills_service.py
src/tools/: data_chunks.py  file_tools.py  llm_tools.py  search_docs.py  setting_context.py  settings_route.py  vector_retriever.py  vector_tools.py
src/ui/: scheme_options.py  streamlit_app.py
tests/: test_consistency_checker_skill.py  test_data_chunks_and_route.py  test_dialogue_voice_skill.py  test_engine_context_limits.py  test_engine_e2e_stub.py  test_engine_json_parse.py  test_excel_export_skill.py  test_outline_writer_followup.py  test_outline_writer_generate.py  test_output_path_service.py  test_policy_short_circuit.py  test_preferences_service.py  test_scheme_options.py  test_setting_splitter_outline.py  test_skill_aliases.py  test_ui_import_smoke.py
tests/integration/: README.md  test_agent_e2e_writefile.py  test_deepseek_with_ms.py
training/: README.md  __init__.py  compare_base_vs_adapter.py  qlora_sft.py  serve_openai_compat.py  sft_system_prompt.py
training/datasets/: style_demo_alpaca.jsonl
