[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "game-writer"
version = "0.1.0"
description = "A game writing assistant workbench (Streamlit + tool/skill agent)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

# 运行时依赖：唯一权威来源（安装用 `pip install -e .` 或 `pip install -r requirements.txt`）
dependencies = [
  "streamlit==1.55.0",
  "httpx==0.28.1",
  "python-dotenv==1.2.2",
  "certifi==2026.2.25",
  "openpyxl==3.1.5",
]

[project.optional-dependencies]
dev = [
  "modelscope-agent==0.7.2",
  "openai==2.29.0",
  "langchain-core==1.2.21",
  "truststore==0.10.4",
  "pytest==8.4.2",
]

# 训练/微调用（可选）：用于学习实践 QLoRA / Transformers，不影响主应用安装体积。
# 说明：bitsandbytes 在原生 Windows 上兼容性不稳定，推荐在 WSL2 + CUDA 环境使用（见 training/README.md）。
train = [
  "transformers==4.56.2",
  "datasets==4.1.1",
  "accelerate==1.10.1",
  "peft==0.17.1",
  "trl==0.23.0",
  "safetensors==0.6.2",
  "bitsandbytes==0.47.0",
  "fastapi==0.116.1",
  "uvicorn==0.35.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["venv*", "venv_skills*", "data*", "logs*", "tmp*", "skills*"]

[tool.pytest.ini_options]
markers = [
  "integration: tests that hit network/external services",
]
filterwarnings = [
  # modelscope-agent 依赖 jieba；jieba 仍使用 pkg_resources，在较新 setuptools 下会告警，与本案无关
  "ignore:pkg_resources is deprecated as an API:UserWarning",
  # llama_index 在 Python 3.14+ 上对 pydantic v1 的提示；第三方库未跟进前可忽略
  "ignore:Core Pydantic V1 functionality isn't compatible:UserWarning",
]

